Revision history for Perl extension Promises

{{$NEXT}}
  [ API CHANGES ]

  [ BUG FIXES ]
    - Change inner working of collect() so that it deals with being passed
      nothing. (GH#82)

  [ DOCUMENTATION ]
  - Remove extra bracket in example. (perlover, GH#78)
  - Minor text changes in POD. (manwar, GH#79)
  - Mention other modules implementing promises. (GH#64)

  [ ENHANCEMENTS ]

  [ NEW FEATURES ]

  [ STATISTICS ]

0.99 2017-10-29
  [ BUG FIXES ]
    - skip all backend compile tests (RT#123404)

  [ STATISTICS ]
    - code churn: 2 files changed, 11 insertions(+), 3 deletions(-)

0.98 2017-10-22
  [ BUG FIXES ]
    - removed hard-dependency on the different backends.

  [ STATISTICS ]
    - code churn: 3 files changed, 120 insertions(+), 161 deletions(-)

0.97 2017-10-22
  [ DOCUMENTATION ]
    - Add a reference to the IO::Async deferred backend. (GH#71, Luke
      Triantafyllidis)

  [ ENHANCEMENTS ]
    - add new function 'collect_hash'. (GH#52, yanick)
    - add 'timeout' method. (GH#70, yanick)

  [ MISC ]
    - make tests use proper api. (TdvW)
    - have test load AnyEvent. (GH#72, Luke Triantafyllidis)

  [ STATISTICS ]
    - code churn: 29 files changed, 640 insertions(+), 50 deletions(-)

0.96 2017-08-26
  - Promotion of trial release to the real deal.

0.95_TRIAL 2017-08-19
  [ENHANCEMENTS]
  - add support for IO::Async. (GH#62)
  - add Mojo::UserAgent example (GH#56, powerman)
  - add $WARN_ON_UNHANDLED_REJECT. (GH#37, ruz)
  - add `is_done` predicate. (GH#45, yanick)
  - add `chain` method. (GH#47, yanick)
  - add methods `resolved`, `rejected` and `deferred` now accept a coderef.
    (GH#50, yanick)
  - allows non-promises in 'collect'. (GH#53, yanick)

  [BUG FIXES]
  - fix case where exception exists but is false. (GH#48, stuckdownawell)

  [DOCUMENTATION]
  - doc fix from Amelia Ireland (RT#107559)
  - fix typos in docs (GH#43, yanick)
  - POD fixes. (GH#39, hatorikibble) 
  - fix Mojo example (GH#41, InfinityGone)

  [MISC]